src/objects/Evaluation_Response__c.object
<CustomObject>
    <fields>
        <fullName>ISP_Service_Element_Service_Code__c</fullName>
        <label>Service Element &amp; Service Code</label>
        <picklist>
            <picklistValues>
                <fullName>149-OR003-Service Related Comm Trans, Commercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR004-Service Related Comm Trans, Mil-WD-Wk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR004-Service Related Comm Trans, Mil-WE-Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR005-Svc Rlt. Comm Trans, Nonmed,Att/Esc-WD-Wk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR005-Svc Rlt. Comm Trans, Nonmed,Att/Esc-WE-Com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR100-Attendant Care-ADL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR101-Attendant Care-ADL-ZE 2:1 Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR101-Attendant Care-IADL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR102-Attendant Care-IADL-ZE 2:1 Staff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR310-Behavior Support Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR321-Assistive Technology Purchase-Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR322-Assistive Technology Purchase-Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR323-Assistive Technology Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR324-Assisstive Technology Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR325-Assistive Technology Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR326-Transition Svcs: Internet installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR330-Transition Svcs: Cleaning before move-in</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR331-Transition Svcs: Food stocking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR332-Transition Svcs: Moving expenses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR333-Transition Svcs: Household goods and furnishings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR342-Transition Svcs: Utility deposits and installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR343-Transition Svcs: Security deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR344-Transition Svcs: Rent deposits</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR380-Specialized Medical Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR406-Community Transition, Extend; per service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR501-Chore Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR507-Relief Care; daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR508-Relief Care; hourly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR526-Attendant Care Sppt,Superv,DD,Home/Comm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>149-OR527-Att Care Sppt,Sup,DD,Home/Comm-ZE 2:1 Staff</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Signature_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Contributors and Signatures OR ISP</description>
        <label>Signature Required for ISP?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISP_Specify_Other__c</fullName>
        <label>Specify Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ISP_Supports_Services_Provided_by__c</fullName>
        <description>OR ISP</description>
        <label>Other Supports Services Provided by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Timelines_Frequency_when__c</fullName>
        <description>OR ISP</description>
        <label>Timelines:</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Title_Relationship_Person__c</fullName>
        <description>Contributors and Signature Data OR ISP</description>
        <label>Title/Relationship to This Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Transportation_Type__c</fullName>
        <label>Transportation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Bus Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Van Transportation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mileage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Match funded transportation - no cost to plan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Type_of_Contributor__c</fullName>
        <label>Type of Contributor</label>
        <picklist>
            <picklistValues>
                <fullName>TypeA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TypeB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TypeC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TypeD</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Type_of_evaluation__c</fullName>
        <label>Type of evaluation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Unit_Type__c</fullName>
        <label>Unit Type</label>
        <picklist>
            <picklistValues>
                <fullName>Hour(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mile(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Each</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event(s)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dollars (only for one-time authorizations)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISP_Units__c</fullName>
        <label># Units</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ISP_What_is_the_desired_result__c</fullName>
        <description>OR ISP</description>
        <label>Desired Result</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Where_evaluation_is_kept__c</fullName>
        <label>Where evaluation is kept</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISP_Where_to_Record_progress__c</fullName>
        <label>Where to Record progress</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISP_Who_is_responsible__c</fullName>
        <description>OR ISP</description>
        <label>Who is responsible?</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ImIncident__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Incident</label>
        <referenceTo>Im_Incident__c</referenceTo>
        <relationshipLabel>Evaluation Responses (Incident)</relationshipLabel>
        <relationshipName>AddendumLogEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ImInvolvedPartyAnnotations__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ImInvolvedPartyAnnotations</label>
        <referenceTo>Im_InvolvedParty__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Im_Rp_ActivityActionNeeded__c</fullName>
        <label>Action Needed/Response Taken</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Im_Rp_ActivityAssigned_To__c</fullName>
        <label>Assigned To</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Im_Rp_ActivityCategory__c</fullName>
        <label>Response Plan Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Im_Rp_ActivityRequiresAck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires Acknowledgement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IncidentInvestigation__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Incident Investigation</label>
        <referenceTo>Im_Investigation__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IncidentResponsePlan__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>IncidentResponsePlan</label>
        <referenceTo>Im_Incident__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incident_Number__c</fullName>
        <label>Incident Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Pain_Level__c</fullName>
        <label>Initial Pain Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Intake_Type__c</fullName>
        <label>Intake Type</label>
        <picklist>
            <picklistValues>
                <fullName>Enteral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_Late_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Late Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Isolation_Event_End_Date__c</fullName>
        <description>End of Isolation Event - Required to end the Isolation Event</description>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Isolation_Event_Start_Date__c</fullName>
        <description>Start of Isolation Event - Required when Isolation Status is not equal to Not Isolation</description>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Isolation_Status__c</fullName>
        <description>Status of Isolation Event</description>
        <label>Isolation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Isolated</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Isolated</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Isolation_Type__c</fullName>
        <description>Type of Isolation - Required when Isolation Status is not equal to Not Isolated</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Droplet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact - C. Difficile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact - MRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact - PPE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>JawWires_Present__c</fullName>
        <label>Are Cutters at Bedside?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>K_plus__c</fullName>
        <label>K+</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>This field is created to render just the label on Evaluation Response Component.</description>
        <label>Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Late_Entry_Note__c</fullName>
        <label>Late Entry Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Length_of_Time__c</fullName>
        <label>Length of Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Threatening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Life Threatening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_picklist__c</fullName>
        <description>picklist of locations where test was administered</description>
        <label>Location</label>
        <picklist>
            <picklistValues>
                <fullName>Left Arm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right Arm</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <label>Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Na__c</fullName>
        <label>Na</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Narrative_Note__c</fullName>
        <label>Narrative Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O2_Intervention_Needed__c</fullName>
        <label>O2 Intervention Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>O2_Narrative_Note__c</fullName>
        <label>O2 Narrative Note</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O2_Saturation__c</fullName>
        <label>O2 Saturation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Orthotics__c</fullName>
        <label>Orthotics</label>
        <picklist>
            <picklistValues>
                <fullName>RUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Isolation_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other Isolation Type</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCI_Contributor_to_Person_Centered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PCI Contributor to Person Centered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PCO2__c</fullName>
        <label>PCO2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PH__c</fullName>
        <label>PH</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PLAT__c</fullName>
        <label>PLAT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO2__c</fullName>
        <label>PO2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPD_Administration_Interval__c</fullName>
        <label>PPD Administration Interval</label>
        <picklist>
            <picklistValues>
                <fullName>First</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Second</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Paper_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is used to determine which record to upsert in the paper form</description>
        <externalId>true</externalId>
        <label>Paper Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Person_Being_Served__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Person Being Served</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <picklist>
            <picklistValues>
                <fullName>Lying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sitting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Program_Association__c</fullName>
        <label>Program Association</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prosthetic_Type__c</fullName>
        <label>Prosthetic Type</label>
        <picklist>
            <picklistValues>
                <fullName>RUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LUE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>R__c</fullName>
        <label>R</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Radiology_Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Test_Date__c</fullName>
        <label>Re-Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Re_test_Result__c</fullName>
        <label>Re-test Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Read_By__c</fullName>
        <description>name of person reading result of test</description>
        <label>Read By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restrained_By__c</fullName>
        <label>Restrained By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Restraint_Action__c</fullName>
        <label>Restraint Action</label>
        <picklist>
            <picklistValues>
                <fullName>Applied Alternative to Restraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Applied Restraint</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Restraint_Type__c</fullName>
        <label>Restraint Type</label>
        <picklist>
            <picklistValues>
                <fullName>MITT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chest Restraint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pressure Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restrain Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Passive Range of Motion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bed Enclosure</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Result_in_mm__c</fullName>
        <label>Result in mm</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAO2__c</fullName>
        <label>SAO2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAT_Percent__c</fullName>
        <label>SAT%</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agreement_Rate__c</fullName>
        <label>Service Agreement Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Agreement</label>
        <referenceTo>Service_Assignment_Provider_JO__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Assignment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Assignment</label>
        <referenceTo>Service_Assignment__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Vocational</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Day Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RBSCL- Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCL (BI)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCL (ID) - Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Based Habilitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alone Time</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Side_Rail_Position__c</fullName>
        <label>Side Rail Position</label>
        <picklist>
            <picklistValues>
                <fullName>Left</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Right</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Both</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <label>Site</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <picklist>
            <picklistValues>
                <fullName>IRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Copy</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Surgery_Procedure__c</fullName>
        <label>Procedure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Surrounding_Tissue_Color_and_Condition__c</fullName>
        <label>Surrounding Tissue Color and Condition</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TMN_Provider_Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMN Provider Application</label>
        <referenceTo>TMN_Provider_Application__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMN_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>TMN Provider</label>
        <referenceTo>TMN_Provider__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TMN_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Staff Member</label>
        <referenceTo>TMN_User__c</referenceTo>
        <relationshipLabel>Evaluation Responses</relationshipLabel>
        <relationshipName>Evaluation_Responses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Temperature__c</fullName>
        <label>Temperature</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_Type__c</fullName>
        <label>Test Type</label>
        <picklist>
            <picklistValues>
                <fullName>MRSA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VRE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acintobacter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-diff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TB</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Time_Given__c</fullName>
        <label>Time Given</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Time_Observed__c</fullName>
        <label>Time Observed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Treatment__c</fullName>
        <label>Treatment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tunneling_in_cm__c</fullName>
        <description>Used in Pressure Ulcer Detail Field Set</description>
        <label>Tunneling in cm</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Generic field to be used for Type across multiple eval response recordtypes</description>
        <label>Type</label>
        <length>300</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Undermining_in_cm__c</fullName>
        <description>Used In Pressure Ulcer Fieldset</description>
        <label>Undermining in cm</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vaccination_Status__c</fullName>
        <label>Vaccination Status</label>
        <picklist>
            <picklistValues>
                <fullName>Administered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PBS Refused</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vaccine_Type__c</fullName>
        <label>Vaccine Type</label>
        <picklist>
            <picklistValues>
                <fullName>Chicken Pox (Varicella)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diphtheria/Tetanus/Pertussis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heamophilus influensae type b</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hepatitis B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivated Poliovirus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influenza</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Measles/Mumps/Rubella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meningitis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pneumonia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rotavirus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shingles (Herpes Zoster)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volume_MLs__c</fullName>
        <label>Volume (MLs)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBC__c</fullName>
        <label>WBC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WheelChair_Type__c</fullName>
        <label>WheelChair Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motorized</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oversized</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>